Initialized modularity with Prism, added Styles and Resources.

--- a/SimpleToster/SimpleToster/App.xaml
+++ b/SimpleToster/SimpleToster/App.xaml
@@ -1,9 +1,11 @@
-﻿<Application x:Class="SimpleToster.App"
+﻿<Application x:Class="SimpleToster.Shell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SimpleToster"
-             StartupUri="MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
