--- a/SimpleToster/SimpleToster/MainWindow.xaml
+++ b/SimpleToster/SimpleToster/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="SimpleToster.MainWindow"
+﻿<Window x:Class="SimpleToster.Shell.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SimpleToster"
+        xmlns:regions="http://prismlibrary.com/"
+        xmlns:lang="clr-namespace:SimpleToster.Shared.Properties;assembly=SimpleToster.Shared"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="SimpleToster">
     <Grid>
-        
+        <TabControl>
+            <TabItem Header="Konfiguracja"
+                     regions:RegionManager.RegionName="{x:Static lang:Resources.ConfigurationRegion}" />
+        </TabControl>
     </Grid>
 </Window>
