--- a/SimpleToster/SimpleToster.QuestionsDatabase/VVM/QuestionsDatabaseView.xaml
+++ b/SimpleToster/SimpleToster.QuestionsDatabase/VVM/QuestionsDatabaseView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="SimpleToster.QuestionsDatabase.QuestionsDatabaseView"
+﻿<UserControl x:Class="SimpleToster.QuestionsDatabase.VVM.QuestionsDatabaseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
-             xmlns:questionsDatabase="clr-namespace:SimpleToster.QuestionsDatabase"
+             xmlns:vvm="clr-namespace:SimpleToster.QuestionsDatabase.VVM"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
-             d:DataContext="{d:DesignInstance questionsDatabase:QuestionsDatabaseViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance vvm:QuestionsDatabaseViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
